Dodane dane startowe (seed method)

--- a/Restauracja/Restauracja.csproj
+++ b/Restauracja/Restauracja.csproj
@@ -193,6 +193,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201806081415395_1.cs" />
+    <Compile Include="Migrations\201806081415395_1.Designer.cs">
+      <DependentUpon>201806081415395_1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\RestaurantContext.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -322,6 +327,11 @@
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="Scripts\index.d.ts" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201806081415395_1.resx">
+      <DependentUpon>201806081415395_1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
