--- a/Restauracja/Restauracja.csproj
+++ b/Restauracja/Restauracja.csproj
@@ -208,6 +208,10 @@
     <Compile Include="Migrations\201806081918007_7.Designer.cs">
       <DependentUpon>201806081918007_7.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201806091147498_8.cs" />
+    <Compile Include="Migrations\201806091147498_8.Designer.cs">
+      <DependentUpon>201806091147498_8.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\RestaurantContext.cs" />
@@ -363,6 +367,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201806081918007_7.resx">
       <DependentUpon>201806081918007_7.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806091147498_8.resx">
+      <DependentUpon>201806091147498_8.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
