--- a/Restauracja/Restauracja.csproj
+++ b/Restauracja/Restauracja.csproj
@@ -345,6 +345,7 @@
     <Content Include="Views\Order_Meal\Index.cshtml" />
     <Content Include="Views\Meals\ChefIndex.cshtml" />
     <Content Include="Views\Account\WaiterRegister.cshtml" />
+    <Content Include="Views\Order_Meal\ChefIndex.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
