--- a/Restauracja/Restauracja.csproj
+++ b/Restauracja/Restauracja.csproj
@@ -347,6 +347,7 @@
     <Content Include="Views\Account\WaiterRegister.cshtml" />
     <Content Include="Views\Order_Meal\ChefIndex.cshtml" />
     <Content Include="Views\Orders\Statistic.cshtml" />
+    <Content Include="Views\Orders\TimeLaps.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
